--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
     "lint": "next lint"
   },
   "packageManager": "npm@11.2.0",
-  "overrides": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^2.2.6",
+    "@sanity/ui": "^2.15.13",
+    "@sanity/vision": "^3.85.1",
     "@tailwindcss/typography": "github:tailwindcss/typography",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
-    "next-sanity": "^0.8.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sanity": "^2.36.6",
+    "next-sanity": "^9.10.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
+    "sanity": "^3.85.1",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
