--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-is": "^19.1.0",
     "sanity": "^3.83.1-canary.23",
+    "sanity-plugin-markdown": "^5.1.0",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
