--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "predev": "npm run typegen",
+    "prebuild": "npm run typegen"
   },
   "packageManager": "npm@11.2.0",
   "dependencies": {
