--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-is": "^19.1.0",
     "sanity": "^3.83.1-canary.23",
     "sanity-plugin-markdown": "^5.1.0",
+    "server-only": "^0.0.1",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
