--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "next": "^15.4.0-canary.5",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.10.2",
     "react": "^19.1.0",
