--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-is": "^19.1.0",
-    "sanity": "^3.83.1-canary.23",
+    "sanity": "^3.86.1",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.17",
