--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "easymde": "^2.20.0",
+    "isomorphic-dompurify": "^2.24.0",
     "lucide-react": "^0.487.0",
     "markdown-it": "^14.1.0",
     "next": "^15.4.0-canary.5",
