--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "next": "^15.4.0-canary.5",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.10.2",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-is": "^19.1.0",
     "sanity": "^3.86.1",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
