--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/ui": "^2.15.13",
     "@sanity/vision": "^3.85.1",
     "@tailwindcss/typography": "github:tailwindcss/typography",
+    "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "easymde": "^2.20.0",
