--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-is": "^19.1.0",
+    "rehype-sanitize": "^6.0.0",
     "sanity": "^3.86.1",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
