--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "packageManager": "npm@11.2.0",
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "next": "$next"
+  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
     "@sanity/image-url": "^1.1.0",
