--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/ui": "^2.15.13",
     "@sanity/vision": "^3.85.1",
+    "@sentry/nextjs": "^9.15.0",
     "@tailwindcss/typography": "github:tailwindcss/typography",
     "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
