--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "$next"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/ui": "^2.15.13",
